--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,23 @@
-name: Deploy Vite app to GitHub Pages (external repo)
+name: build and deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
-
-      - name: Deploy to GitHub Pages repo
+      - run: npm ci
+      - run: npm run build   # this creates dist/
+      - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          personal_token: ${{ secrets.PERSONAL_TOKEN }}   # or use deploy_key
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist   # vite build output
           external_repository: 2796gaurav/2796gaurav.github.io
           publish_branch: main
-          publish_dir: ./dist
-          destination_dir: blazemetrics
