--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,22 +2,31 @@ name: build and deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main ]   # Deploy whenever you push to main branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      # Checkout the code
       - uses: actions/checkout@v4
+
+      # Setup Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+
+      # Install dependencies
       - run: npm ci
-      - run: npm run build   # this creates dist/
-      - name: Deploy to gh-pages
+
+      # Build the project (generates dist/)
+      - run: npm run build
+
+      # Deploy dist/ to 2796gaurav.github.io repo
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.PERSONAL_TOKEN }}
-          publish_dir: ./dist   # vite build output
+          personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           external_repository: 2796gaurav/2796gaurav.github.io
           publish_branch: main
+          publish_dir: ./dist
