--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,17 @@
 # dependencies
 node_modules/
 
-# production build
+# production build output (we don’t commit this)
 dist/
 build/
+
+# local env files
+.env
+.env.*.local
 
 # misc
 .DS_Store
 Thumbs.db
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # logs
 npm-debug.log*
