--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,25 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "devCommand": "npm run dev",
-  "installCommand": "npm ci",
-  "framework": "vite",
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "/blazemetrics/",
-      "statusCode": 302
-    }
-  ],
-  "rewrites": [
+"buildCommand": "npm run build",
+"outputDirectory": "dist",
+"devCommand": "npm run dev",
+"installCommand": "npm ci",
+"framework": "vite",
+"rewrites": [
+{
+"source": "/(.*)",
+"destination": "/index.html"
+}
+],
+"headers": [
   {
-  "source": "/blazemetrics/(.*)",
-  "destination": "/index.html"
+    "source": "/assets/(.*)",
+    "headers": [
+      {
+        "key": "Cache-Control",
+        "value": "public, max-age=31536000, immutable"
+      }
+    ]
   }
-  ],
-  "headers": [
-  {
-  "source": "/blazemetrics/assets/(.*)",
-  "headers": [
-  {
-  "key": "Cache-Control",
-  "value": "public, max-age=31536000, immutable"
-  }
-  ]
-  }
-  ]
+]
 }
 
