--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,7 @@
 {
-"buildCommand": "npm run build",
-"outputDirectory": "dist",
-"devCommand": "npm run dev",
-"installCommand": "npm ci",
-"framework": "vite",
-"rewrites": [
-{
-"source": "/(.*)",
-"destination": "/index.html"
-}
-],
-"headers": [
-  {
-    "source": "/assets/(.*)",
-    "headers": [
-      {
-        "key": "Cache-Control",
-        "value": "public, max-age=31536000, immutable"
-      }
-    ]
-  }
-]
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "devCommand": "npm run dev",
+  "installCommand": "npm ci"
 }
 
